# Wh0Dini-AI

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Devcontainer.json  LICENSE  Makefile  Ollama-API  README  README.md  SECURITY.md  SETUP.md  Wh0Dini-AI.config  Wh0Dini-AI.env  Wh0Dini_AI.code-workspace  Wh0Dini_AI.code_workspace.py  Wh0Dini_AI.config  Wh0Dini_AI_Requirements.txt  Wh0Dini_AI_env.py  Wh0Dini_AI_main.py  Wh0Dini_AI_txt_requirements.py  app.py  gitignoreshenanigans  interactive_test.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  test_api.py  test_api_alternative.py  test_api_simple.py
.devcontainer/: devcontainer.json
.github/workflows/: codacy.yml
static/: index.html  script.js  style.css
wh0dini_ai/: __init__.py  app.py  main.py
